# The-Curator

./: .dockerignore  .env.local.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.classifier  Dockerfile.curator  Dockerfile.defender  Dockerfile.frontend  Dockerfile.notifier  Makefile  README.md  azure.yaml  docker-compose.yml  pyproject.toml
.agents/: GAPS.md
.agents/plans/: m0-poc-end-to-end-skill-submission.md  m1-azure-deployment-and-auth.md  m2-curator.md  m2.1-curator-integration-tests.md  m2.2-frontend-curator-ui.md  m2.3-frontend-catalog-tab.md  m3-curator-llm-review.md  m4-aks-deployment.md  m5-defender-quarantine-notifier.md  m5-followup-gaps-fix.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  invariant_violation.yml
.github/workflows/: ci.yml  deploy-aks.yml  deploy.yml  rotate-key.yml
.opencode/: AGENTS-template.md  CONTEXT.md  run-queue.sh
.opencode/agents/: codebase-mapper.md
.opencode/commands/: create-rules.md  plan-feature.md
.opencode/logs/: latest
.opencode/skills/: README.md
backend/: __init__.py  app.py
backend/api/: admin.py  api_keys.py  curator.py  skills.py  uploads.py
backend/core/: __init__.py  auth.py  blob.py  config.py  cosmos.py  deps.py  errors.py  logging.py  redis.py  telemetry.py
backend/models/: api.py  api_key.py  audit.py  curator.py  defender.py  notifications.py  review.py  schedule.py  skill.py
backend/services/: __init__.py  (+28 more)
docs/: ARCHITECTURE.md  PRD.md  architecture.excalidraw
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
infra/: README.md  main.bicep  main.json  main.parameters.json
scripts/: bootstrap_blob_containers.py  helm-deploy-dev.sh  install_emulator_cert.sh  seed_skills.py  setup-entra.sh  setup_federated_credentials.sh  smoke_m5.sh  wait_for_emulators.py
(+243 files in other folders)
